# rust-regex-dsl

./: Cargo.toml  LICENSE  README.md
.github/workflows/: on_push.yaml  post-release.yml  release.yaml
examples/: email.rs  ips.rs
rust-regex-dsl-creator/: Cargo.toml
rust-regex-dsl-creator/src/: ast_impl.rs  basic_impls.rs  lib.rs  main.rs  printer.rs
rust-regex-dsl-creator/tests/: test_builder.rs
rust-regex-dsl-creator/tests/test_cases/: any.toml  any_of_ascii.toml  any_of_unicode_perl.toml  apply.toml  assertions.toml  at_least.toml  bounded.toml  escaped_literal.toml  exactly.toml  group_names.toml  group_number_tests.toml  intersectrion.toml  maybe.toml  maybe_repeat.toml  maybe_repeat_lazy.toml  negative_subtraction.toml  non_capture_group.toml  not_any_of_literals.toml  perl.toml  predefine_class.toml  range.toml  repeat.toml  simple_concat.toml  simple_eq.toml  simple_literal.toml  subtraction.toml  unsupported_predefine_classes.toml  xor.toml
rust-regex-dsl_derive/: Cargo.toml
rust-regex-dsl_derive/src/: create_capture.rs  dsl.rs  error_factory.rs  group.rs  ident_parser.rs  lib.rs  predefined_class.rs  user_class.rs
rust-regex-dsl_derive/src/functions/: any.rs  any_of.rs  apply.rs  capture_group.rs  concat.rs  eq.rs  mod.rs  parse_ident.rs  parse_list.rs  quantifier_type.rs  regex.rs  repeat.rs  times.rs
rust-regex-dsl_derive/tests/: any_tests.rs  apply_tests.rs  capture_groups_tests.rs  concat_test.rs  eq_tests.rs  failing_tests.rs  predefined_class.rs  regex_dsl_test.rs  regex_tests.rs  repeat_tests.rs  single_word_tests.rs  test_any_of.rs  test_groups.rs  times_tests.rs
rust-regex-dsl_derive/tests/ui/: bad_any.rs  bad_any.stderr  bad_any_of.rs  bad_any_of.stderr  bad_apply.rs  bad_apply.stderr  bad_concat.rs  bad_concat.stderr  bad_create_capture.rs  bad_create_capture.stderr  bad_eq.rs  bad_eq.stderr  bad_groups.rs  bad_groups.stderr  bad_predefine_class.rs  bad_predefine_class.stderr  bad_regex.rs  bad_regex.stderr  bad_repeate.rs  bad_repeate.stderr  bad_times.rs  bad_times.stderr  bad_timesparser.rs  bad_timesparser.stderr  bad_word.rs  bad_word.stderr  empty_regex.rs  empty_regex.stderr  invalid_regex.rs  invalid_regex.stderr  no_args_regex.rs  no_args_regex.stderr  number_regex.rs  number_regex.stderr  two_strings_regex.rs  two_strings_regex.stderr
scripts/: post_release.sh
src/: lib.rs
