[package]
name = "rust-regex-dsl"
version = "0.1.1"
edition = "2021"
authors = ["Yiftach Kaplan <me@ykaplan.me>"]
license = "MIT"
description = "Regular expression DSL."
keywords = ["regex", "dsl"]
categories = ["text-processing"]
exclude = ["/.github/*", "/.gitignore"]
repository = "https://github.com/yift/rust-regex-dsl"
readme = "README.md"


[workspace]
members = [ "rust-regex-dsl-creator",
  "rust-regex-dsl_derive",
]

[dependencies]
lazy_static = "1.5"
regex = "1.10"
rust-regex-dsl_derive = { path = "./rust-regex-dsl_derive", version = "0.1.1"}
rust-regex-dsl-creator = { path = "./rust-regex-dsl-creator", version = "0.1.1", optional = true, default-features = false}

[features]
default = []
creator = ["rust-regex-dsl-creator"]
