[package]
name = "rust-regex-dsl-creator"
version = "0.1.4"
edition = "2021"
authors = ["Yiftach Kaplan <me@ykaplan.me>"]
license = "MIT"
description = "Regular expression DSL derive macros."
keywords = ["regex", "dsl", "derive"]
categories = ["text-processing"]
repository = "https://github.com/yift/rust-regex-dsl"
readme = "../README.md"

[dependencies]
regex = "1.10"
regex-syntax = "0.8"

[dev-dependencies]
tempdir = "0.3"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.13"
