[package]
name = "rust-regex-dsl_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
regex = "1.10"
quote = "1.0"
litrs = "0.4"
thiserror = "1.0"
itertools = "0.13"
lazy_static = "1.5"
convert_case = "0.6"
syn = "2.0"
proc-macro2 = "1.0"

[dev-dependencies]
rust-regex-dsl = { path = ".."}
trybuild = "1.0"