[package]
name = "rust-regex-dsl_derive"
version = "0.1.5"
edition = "2021"
authors = ["Yiftach Kaplan <me@ykaplan.me>"]
license = "MIT"
description = "Regular expression DSL derive macros."
keywords = ["regex", "dsl", "derive"]
categories = ["text-processing"]
repository = "https://github.com/yift/rust-regex-dsl"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
regex = "1.10"
quote = "1.0"
itertools = "0.13"
lazy_static = "1.5"
convert_case = "0.6"
syn = {version = "2.0", features = ["full"]}
proc-macro2 = "1.0"

[dev-dependencies]
rust-regex-dsl = { path = ".."}
trybuild = "1.0"